fix z-index

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,6 @@ h2.appearAtEnd {
     transform: translate(-50%);
     animation: wave 7s infinite linear;
     transition: all 1s;
-    z-index: 4;
 }
 
 @keyframes wave {
@@ -192,7 +191,6 @@ h2.appearAtEnd {
 .straw {
     opacity: 0;
     position: fixed;
-    /* top: 20%; */
     rotate: -8deg;
     height: 350px;
     width: 30px;
